--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     },
     "minimum-stability": "dev",
     "require": {
-        "yiisoft/yii2": "~2.0.0"
+        "yiisoft/yii2": "~2.0.0",
+        "kartik-v/yii2-grid": "3.1.3"
     },
     "autoload": {
         "psr-4": {
